--- a/settings.cfg
+++ b/settings.cfg
@@ -2,5 +2,6 @@
 	"Server": "irc.w3.org",
 	"Port": 6665,
 	"Channel": "#shrektest",
-	"Nick": "shrekBot"
+	"Nick": "shrekBot",
+	"Password": "temppass"
 }
