tracks nicks in channel
Will know only apply actions to nicks in channel.

--- a/settings.cfg
+++ b/settings.cfg
@@ -3,5 +3,6 @@
 	"Port": 6665,
 	"Channel": "#shrektest",
 	"Nick": "shrekBot",
-	"Password": "temppass"
+	"Password": "temppass",
+	"Greeting": "shrekBot is ready to assist."
 }
