--- a/settings.cfg
+++ b/settings.cfg
@@ -2,5 +2,7 @@
 	"Server": "irc.w3.org",
 	"Port": 6665,
 	"Channel": "#shrektest",
-	"Nick": "shrekBot"
+	"Nick": "shrekBot",
+	"Password": "temppass",
+	"Greeting": "shrekBot is ready to assist."
 }
