Revert "tracks nicks in channel"
This reverts commit 9dcce77bff898f7295228c00f7c9cfbf4159b8e2.

--- a/settings.cfg
+++ b/settings.cfg
@@ -3,6 +3,5 @@
 	"Port": 6665,
 	"Channel": "#shrektest",
 	"Nick": "shrekBot",
-	"Password": "temppass",
-	"Greeting": "shrekBot is ready to assist."
+	"Password": "temppass"
 }
