--- a/settings.cfg
+++ b/settings.cfg
@@ -2,6 +2,5 @@
 	"Server": "irc.w3.org",
 	"Port": 6665,
 	"Channel": "#shrektest",
-	"Nick": "shrekBot",
-	"Password": "temppass"
+	"Nick": "shrekBot"
 }
