changed from opsplx to use passwords
Changed the code to use a password from the config file. Bot will now autorequest ops if known bot is online.

--- a/settings.cfg
+++ b/settings.cfg
@@ -4,5 +4,14 @@
 	"Channel": "#shrektest",
 	"Nick": "shrekBot",
 	"Password": "temppass",
-	"Greeting": "shrekBot is ready to assist."
+	"Greeting": "shrekBot is ready to assist.",
+	"Goodbye": "shrekBot has been terminated.",
+	"Bots":{
+	    "hatchetBot":[
+	        "hatchetPW",
+	        "hatchet.url"],
+	    "raspiBot":[
+	        "raspiPW",
+	        "raspi.IP"]
+	}
 }
