--- a/settings.cfg
+++ b/settings.cfg
@@ -2,5 +2,16 @@
 	"Server": "irc.w3.org",
 	"Port": 6665,
 	"Channel": "#shrektest",
-	"Nick": "shrekBot"
+	"Nick": "shrekBot",
+	"Actions":[
+	    "slaps",
+	    "chases",
+	    "examines",
+	    "flicks",
+	    "hugs",
+	    "mimics",
+	    "knifes",
+	    "surveils",
+	    "pokes"
+	]
 }
